--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,8 @@
 
         <activity
             android:name="edu.aku.hassannaqvi.rsvstudy.ui.sync.SyncActivity"
+            android:theme="@style/AppTheme1"
+
             android:screenOrientation="portrait" />
 
         <activity android:name="edu.aku.hassannaqvi.rsvstudy.FormsList" />
