--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
 
