--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    // RecyclerView
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+//    // RecyclerView
+//    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
 
@@ -65,4 +65,6 @@ dependencies {
     implementation 'com.github.AliAzaz:Edittext-Library:1.0.4'
 
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation 'com.balysv:material-ripple:1.0.2'
 }
