--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
 
     implementation 'com.balysv:material-ripple:1.0.2'
+
+    implementation 'com.google.android:flexbox:2.0.0'
 }
