--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,10 @@
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustResize|stateHidden">
+        <activity android:name=".ui.form1.Section06Activity"></activity>
         <activity
             android:name=".ui.ChildListActivity"
-            android:theme="@style/AppTheme1"
-
-            />
+            android:theme="@style/AppTheme1" />
         <activity
             android:name=".ui.other.SplashscreenActivity"
             android:screenOrientation="portrait"
@@ -86,7 +85,6 @@
             android:name=".ui.sync.SyncActivity"
             android:parentActivityName=".ui.other.MainActivity"
             android:screenOrientation="portrait"
-
             android:theme="@style/AppTheme1" />
         <activity android:name=".FormsList" />
 
