--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:name=".ui.ChildListActivity"
             android:theme="@style/AppTheme1" />
         <activity
-            android:name=".ui.form1.Section06Activity"
+            android:name=".ui.other.SplashscreenActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
@@ -70,10 +70,10 @@
             android:name=".ui.form1.Section05Activity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
-        <activity
-            android:name=".ui.other.SplashscreenActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden" />
+        <!--        <activity-->
+        <!--            android:name=".ui.other.SplashscreenActivity"-->
+        <!--            android:screenOrientation="portrait"-->
+        <!--            android:windowSoftInputMode="adjustResize|stateHidden" />-->
         <activity
             android:name=".ui.form1.Section07Activity"
             android:screenOrientation="portrait"
