--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         android:windowSoftInputMode="adjustResize|stateHidden">
 
         <activity
@@ -29,7 +30,7 @@
             android:theme="@style/AppTheme1" />
 
         <activity
-            android:name=".ui.form1.Section06Activity"
+            android:name=".ui.other.SplashscreenActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden">
 
@@ -83,7 +84,7 @@
             android:windowSoftInputMode="adjustResize|stateHidden" />
 
         <activity
-            android:name=".ui.other.SplashscreenActivity"
+            android:name=".ui.form1.Section06Activity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
 
