--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     def versionPropsFile = file('version.properties')
 
@@ -21,7 +21,7 @@ android {
         defaultConfig {
             applicationId "edu.aku.hassannaqvi.rsvstudy"
             minSdkVersion 21
-            targetSdkVersion 28
+            targetSdkVersion 29
             versionCode code
             versionName "0.1"
             testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -41,29 +41,29 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.2.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:support-media-compat:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.media:media:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.BlackBoxVision:datetimepicker-edittext:v0.4.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    testImplementation 'junit:junit:4.13'
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 //    // RecyclerView
 //    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
-    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
+    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.6'
 
     //Ali mask
-    implementation 'com.github.AliAzaz:Edittext-Library:1.0.4'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.AliAzaz:Edittext-Library:2.0.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'com.balysv:material-ripple:1.0.2'
 
